--- a/workshop/notebooks/env_cyto2022.yml
+++ b/workshop/notebooks/env_cyto2022.yml
@@ -1,4 +1,10 @@
-# Tested on Windows only but should also for Linux
+# Tested on Windows only but should also work for Linux.
+#
+# Disclaimer:
+#
+# Carl Zeiss Microscopy GmbH's ZEN software undertakes no warranty concerning the use of this YML file. Use at your won risk.
+# By using any of those examples you agree to this disclaimer.
+#
 name: cyto2022
 channels:
   - defaults
