--- a/.gitignore
+++ b/.gitignore
@@ -154,3 +154,4 @@ workshop/notebooks/newCZI_zloc.czi
 
 /workshop/notebooks/nucleus_data/**
 /workshop/notebooks/data/**
+talk/~$cytodata_ZEISS_Open_ML_Ecosystem.pptx
